tests/ui/invalid-modifier.stderr
error: unrecognized key code "control"
 --> tests/ui/invalid-modifier.rs:2:18
  |
2 |     crokey::key!(control-c);
  |                  ^^^^^^^
